Añadir el README y la LICENCIA

--- a/python/enp_analysis.ipynb
+++ b/python/enp_analysis.ipynb
@@ -169,7 +169,7 @@
    "metadata": {},
    "source": [
     "<footer style='text-align: left; margin-top: 20px; font-size: small; color: gray;'>\n",
-    "    <p>Sitio desarrollado por <a href='https://juancarlosbio.github.io/juancarlos_portfolio_esp/'>Juan Carlos García Estupiñán</a></p>\n",
+    "    <p>Sitio desarrollado por <a href='https://juancarlosbio.github.io/juancarlos_portfolio_esp/'>Juan Carlos García Estupiñán</a> mediante la MIT LICENSE</p>\n",
     "</footer>"
    ]
   }
