Nuevas especies C-23 Pino Santo

--- a/python/enp_analysis.ipynb
+++ b/python/enp_analysis.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# INVENTARIO DE ESPECIES ENCONTRADAS EN LOS ESPACIOS NATURALES PROTEGIDOS (ENP) ISLA GRAN CANARIA."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -38,11 +31,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "metadatos = pd.read_csv(\"../metadata/metadatos_espacios.csv\").iloc[my_variable,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# FUNCIONES Y ENLACES\n",
     "# URL de Biota\n",
     "url_biota = \"https://www.biodiversidadcanarias.es/biota/especie/\"\n",
     "\n",
-    "def create_gt(df, enp, categoria):\n",
+    "def create_gt(df, enp, categoria, n_species):\n",
     "    \"\"\"_Resumen:\n",
     "    Esta función tiene como objetivo procesar los datos de las tablas CSV en el\n",
     "    directorio ENP (Espacios Naturales Protegidos), con la intención de crear \n",
@@ -76,9 +78,9 @@
     "    gt = (GT(df)\n",
     "        .tab_header(\n",
     "            title = html(\n",
-    "                f\"<strong>INVENTARIO DE ESPECIES DEL ENP {enp}</strong>\"\n",
+    "                f\"<strong>INVENTARIO DE ESPECIES DEL ESPACIO NATURAL PROTEGIDO (ENP) {enp}, ISLA DE GRAN CANARIA</strong>\"\n",
     "            ),\n",
-    "            subtitle = html(f\"Categoría del ENP: <u>{categoria}</u>\")\n",
+    "            subtitle = html(f\"Categoría del ENP: <u>{categoria}</u><br><i>Número de especies en total del ENP = <strong>{n_species}</strong><i>\")\n",
     "        )\n",
     "        .cols_label(\n",
     "            id_biota = html(\"<strong>ID Biota</strong>\"),\n",
@@ -108,18 +110,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadatos = pd.read_csv(\"../metadata/metadatos_espacios.csv\").iloc[my_variable,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_seleccionado = pd.read_csv(f\"../ENP/{unidecode(metadatos[3].lower().replace(' ', '_'))}/{metadatos[2]}\")\n",
+    "## Leemos los datos usando metadata/ para automatizar el proceso\n",
+    "df_seleccionado = pd.read_csv(\n",
+    "    f\"../ENP/{unidecode(metadatos[3].lower().replace(' ', '_'))}/{metadatos[2]}\"\n",
+    ")\n",
     "logo_enp = f\"<a target='_blank' rel='noreferrer'> <img src='{metadatos[4]}' alt='logoenp' width='30' height='30'/> </a>\"\n",
-    "df_seleccionado_table = create_gt(df_seleccionado, f\"{metadatos[0] + \" \" + metadatos[1].upper()}\", f\"{metadatos[3] + logo_enp}\")"
+    "## Nº de especies en total\n",
+    "n_especies = df_seleccionado.shape[0]"
    ]
   },
   {
@@ -128,31 +125,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Estadísticas básicas\n",
-    "## Nº de especies en total\n",
-    "#n_especies = df_seleccionado.shape[0]\n",
-    "## Nº de especies según el reino\n",
-    "#n_especies_reino = df_seleccionado.groupby(\"reino\").size().reset_index(name = \"n\")\n",
-    "#\n",
-    "#(GT(\n",
-    "#    pd.DataFrame(data = [\n",
-    "#        f\"<u>Número de especies observadas en total: {n_especies}</u>\" + \n",
-    "#        \"<br><br>\" +\n",
-    "#        f\"Número de especies de <span style='color: red'>Metazoa</span>: {n_especies_reino.n[0]}\" +\n",
-    "#        \"<br>\" +\n",
-    "#        f\"Número de especies de <span style='color: forestgreen'>Plantae</span>: {n_especies_reino.n[1]}\" \n",
-    "#        ], columns=[\"estadisticas\"])\n",
-    "#    )\n",
-    "#    .tab_header(title = html(\"<strong>ESTADÍSTICAS BÁSICAS</strong>\"))\n",
-    "#    .cols_label(estadisticas = html(\"\"))\n",
-    "#    .tab_options(\n",
-    "#        table_border_top_color=\"#FFFFFF\", \n",
-    "#        table_border_bottom_color=\"#FFFFFF\",\n",
-    "#        column_labels_border_top_color = \"#FFFFFF\",\n",
-    "#        column_labels_border_bottom_color = \"black\",\n",
-    "#        table_body_border_bottom_color = \"#FFFFFF\"\n",
-    "#        \n",
-    "#    ))"
+    "df_seleccionado_table = create_gt(df=df_seleccionado, \n",
+    "                                  enp=f\"{metadatos[0] + \" \" + metadatos[1].upper()}\", \n",
+    "                                  categoria=f\"{metadatos[3] + logo_enp}\",\n",
+    "                                  n_species=n_especies)"
    ]
   },
   {
